# ai-manager

./: .env.example  .gitattributes  .gitignore  README.md  architecture.md  dev.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  prod_ai_manager.sh
admin/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
admin/src/: App.tsx
admin/src/api/: client.ts  index.ts
admin/src/components/: ImpersonationBanner.tsx  MainLayout.tsx  ProtectedRoute.tsx
admin/src/hooks/: useAuth.ts
admin/src/pages/: BookingsPage.tsx  ChannelsPage.tsx  ConversationDetailPage.tsx  ConversationsPage.tsx  DashboardPage.tsx  LandingPage.tsx  LeadsPage.tsx  LoginPage.tsx  UsersPage.tsx  (+6 more)
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_02_25_0001_initial_schema.py  2026_02_26_0002_keywords_array_to_jsonb.py  2026_02_26_0003_add_channel_script_fk.py  2026_02_28_0004_add_manager_id_to_conversations.py  2026_02_28_0005_add_owner_id_to_resources.py  2026_02_28_0006_add_script_binding_and_score_config.py
backend/app/: config.py  dependencies.py  logging_config.py  main.py  middleware.py  rate_limit.py
backend/app/ai/: __init__.py  base_client.py  client_factory.py  context_builder.py  embeddings.py  engine.py  format_converter.py  llm_client.py  openai_client.py  openrouter_client.py  prompts.py  qdrant_init.py  qualification.py  rag.py  tools.py
backend/app/api/: analytics.py  auth.py  bookings.py  channels.py  conversations.py  leads.py  managers.py  router.py  scripts.py  settings.py  users.py  webhooks.py  widget.py  ws_manager.py
backend/app/channels/: __init__.py  base.py  telegram.py  web_widget.py
backend/app/db/: create_admin.py  repository.py  seed.py  session.py
backend/app/integrations/: __init__.py  crm.py  google_sheets.py  webhook_notifier.py
backend/app/models/: __init__.py  base.py  booking.py  channel.py  conversation.py  lead.py  script.py  settings.py  user.py
backend/app/schemas/: __init__.py  analytics.py  auth.py  booking.py  channel.py  common.py  conversation.py  lead.py  manager.py  messages.py  script.py  settings.py  user.py
backend/app/services/: __init__.py  analytics_service.py  auth_service.py  conversation_service.py  lead_service.py  telegram_polling_service.py  telegram_update_handler.py  telegram_webhook_service.py
backend/app/tasks/: __init__.py  analytics.py  celery_app.py  crm_sync.py  qdrant_sync.py
backend/tests/: conftest.py
backend/tests/test_ai/: test_prompts.py  test_qualification.py
backend/tests/test_api/: test_auth.py  test_leads.py  test_widget.py
backend/tests/test_services/: test_conversation_service.py  test_lead_service.py
nginx/: Dockerfile  nginx.conf
telegram-bot/: Dockerfile  pyproject.toml
telegram-bot/bot/: __init__.py  api_client.py  config.py  health.py  main.py
telegram-bot/bot/handlers/: __init__.py  conversation.py  fallback.py  start.py
widget/: Dockerfile  embed.js  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
widget/src/: Widget.tsx  api.ts  main.tsx  styles.css
(+6 files in other folders)
